# velobus

./: .gitignore  manage.py  pyproject.toml
frontend/: .eslintrc.js  index.html  package.json  vite.config.js  webpack.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: HelloWorld.vue  ResponsibleForm.vue  StudentForm.vue  SubscriberList.vue  TrackMap.vue
frontend/src/routers/: router.js
frontend/src/stores/: map.js
subscription/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
subscription/fixtures/: tracks_example.json
subscription/migrations/: 0001_initial.py
templates/: auth.html  base.html  subscription.html
velobus/: asgi.py  settings.py  urls.py  wsgi.py
